syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "IncomeShared.proto";

message UpdateIncomeBaseDataRequest {
    int32 IncomeId = 1;

    DomainServices.SalesArrangementService.IncomeBaseData BaseData = 3;
}
